# DSC-Rust

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  TODO.md  build.rs  container.sh  default.nix  docker_init  websockets.html
_test/: HaeringAPI.cc  a.out
config/: config.json  database.json  default_discipline.json  line.json  websocket.json
config/disciplines/: lg.json  lg_auflage.json  lg_demo.json  lg_training.json
config/modes/disciplines/: lg_finale.json  lg_training.json  lg_wettkampf.json  lp_demo.json
config/modes/targets/: lp.json
config/targets/: lg.json  lp.json
migrations/2018-05-24-091656_create_sessions/: down.sql  up.sql
src/: config.rs  dsc_manager.rs  main.rs  print.rs
src/_tests/: arc_mutex.rs  test.js
src/config/: config.rs  error.rs  mod.rs
src/database/: database.rs  handler.rs  mod.rs  models.rs  schema.rs
src/device_api/: api.rs  demo.rs  esa.c  esa.rs  mod.rs
src/device_api/esa/: band_ack.rs  esa.c  esa.rs  mod.rs  paper_ack.rs
src/discipline/: discipline.rs  error.rs  interface.rs  mod.rs  part.rs  target.rs  time.rs
src/helper/: dsc_demo.rs  mod.rs  round_to_one.rs
src/session/: counter.rs  info.rs  mod.rs  part.rs  series.rs  session.rs  shot.rs  user.rs
src/web/: mod.rs  socket.rs  types.rs
templates/print/: default.tex
tmp/: websockets.html
