[package]
name = "dsc"
version = "0.1.0"
authors = ["Jannik Lorenz <dev@janniklorenz.de>"]
build = "build.rs"

[dependencies]
serde = { version = "1.0", optional = false }
serde_derive = { version = "1.0", optional = false }
serde_json = { version = "1.0", optional = false }
websocket = "0.20.2"
time = "0.1.38"
byteorder = "1.2.2"
rand = "0.4"

[build-dependencies]
cc = "1.0"
