[package]
name = "dsc"
version = "0.1.0"
authors = ["Jannik Lorenz <dev@janniklorenz.de>"]
build = "build.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
websocket = "0.24"
time = "0.2.10"
byteorder = "1.2.2"
rand = "0.7.3"
# simplesvg = "0.4"
dotenv = "0.9.0"
tera = { version = "0.11.20" }
clap = "2.32.0"
#tungstenite = "0.10.1"

#[dependencies.websocket]
#git = "https://github.com/websockets-rs/rust-websocket.git"

[build-dependencies]
cc = "1.0"
